Refactors for React

--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Movies</title>
   <link rel="stylesheet" href="style.css">
-  <script src='https://unpkg.com/vue@next'></script>
+  <script src="https://unpkg.com/react@18/umd/react.development.js" crossorigin></script>
+  <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js" crossorigin></script>
+  <script src="https://unpkg.com/@babel/standalone@7.19.1/babel.min.js"></script>
 </head>
 <body>
-  <div id="app" class="container">
+  <div id="root" class="container">
     <h1>Movies</h1>
     <form>
        <input type="text">
