React Movie Search

--- a/index.html
+++ b/index.html
@@ -5,26 +5,14 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Movies</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.css">
   <link rel="stylesheet" href="style.css">
   <script src="https://unpkg.com/react@18/umd/react.development.js" crossorigin></script>
   <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js" crossorigin></script>
   <script src="https://unpkg.com/@babel/standalone@7.19.1/babel.min.js"></script>
 </head>
 <body>
-  <div id="root" class="container">
-    <h1>Movies</h1>
-    <form>
-       <input type="text">
-       <select>
-         <option value="index">index</option>
-         <option value="title">title</option>
-         <option value="year">year</option>
-      </select>
-    </form>
-    <div class="movies">
-      <div class="movie">Title (year)</div>
-    </div>
-  </div>
-  <script src="script.js"></script>
+  <div id="root" class="container"></div>
+  <script type="text/babel" src="script.js"></script>
 </body>
 </html>
